プロファイルによりtestで使用するjettyが変わるように修正