@@ -19,14 +19,59 @@
     <artifactId>nablarch-parent</artifactId>
     <version>5u15-SNAPSHOT</version>
   </parent>
-  
+
+
+
   <profiles>
     <profile>
-      <id>java9</id>
+      <!-- Java11以外ではテストにjetty6を使用する。 -->
+      <id>default</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
       <properties>
-        <junit.additionalArgLine>--add-modules java.activation</junit.additionalArgLine>
+        <!-- JDKごとのリソースディレクトリ(プロファイルにより切り替わる) -->
+        <env.resources>${project.basedir}/src/env/jetty6/resources</env.resources>
       </properties>
+      <dependencies>
+        <dependency>
+          <groupId>com.nablarch.framework</groupId>
+          <artifactId>nablarch-testing-jetty6</artifactId>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
     </profile>
+    <profile>
+      <id>java11</id>
+      <properties>
+        <env.resources>${project.basedir}/src/env/jetty9/resources</env.resources>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>com.nablarch.framework</groupId>
+          <artifactId>nablarch-testing-jetty9</artifactId>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>javax.activation</groupId>
+          <artifactId>activation</artifactId>
+          <version>1.1.1</version>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <!-- MANIFEST.MFでClass-Pathを指定すると、依存jar内で定義されているtaglibのuriを正しく解決してくれない。 -->
+              <useManifestOnlyJar>false</useManifestOnlyJar>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
   </profiles>
 
   <dependencies>
@@ -93,7 +138,7 @@
       <artifactId>nablarch-testing</artifactId>
       <scope>test</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>com.nablarch.dev</groupId>
       <artifactId>nablarch-test-support</artifactId>
@@ -106,4 +151,11 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+    <resources>
+      <resource>
+        <directory>${env.resources}</directory>
+      </resource>
+    </resources>
+  </build>
 </project>
